1.  解决bug app名称太长 http://jira.ymatou.cn:8080/browse/DIS-5 2. 任务中心： 任务审核、任务详情等功能

--- a/disconf-web/html/assets/css/project.css
+++ b/disconf-web/html/assets/css/project.css
@@ -1128,6 +1128,13 @@ q:before, q:after {
     text-align: center;
 }
 
+.detail-private-line{
+    margin-bottom: 5px;
+    text-align: center;
+}
+.detail-private-line span{
+    margin-right: 10px;
+}
 .private-item {
     margin-bottom: 20px;
 }
