1.main.html点击获取,实例  解决内容太多显示不完全，使用layer弹出 2.修改审核比如文件，列出对比区别

--- a/disconf-web/src/main/resources/static/dep/multiselect/lib/google-code-prettify/prettify.css
+++ b/disconf-web/src/main/resources/static/dep/multiselect/lib/google-code-prettify/prettify.css
@@ -23,6 +23,8 @@ ol.linenums {
   margin: 0 0 0 2px; /* IE indents via margin-left */
 } 
 ol.linenums li {
+  word-wrap: break-word;
+  white-space: pre-wrap;
   padding-left: 12px;
   color: #bebec5;
   line-height: 18px;
